# flask-sso

./: README.md  setup.cfg
src/: setup.py  utils.py
src/flask-sso/: sso_auth.py  utils.py
src/flasksso/: __init__.py  config.py  sso_auth.py  utils.py
