[metadata]
name = flask-sso
version = 0.0.1
author = Adludio INC.
author_email = datascience@adludio.com
description = Adludio sso authentication for flask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FutureAdLabs/flask-sso
project_urls =
	Bug Trackers = https://github.com/FutureAdLabs/flask-sso/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    flask

[options.packages.find]
where = src

